# rust_base

./: Cargo.toml  rust_base.yaml  rustfmt.toml
src/: configuration.rs  core.rs  database.rs  entity.rs  lib.rs  logger.rs  main.rs
src/core/: controller.rs  entity.rs
src/database/: dummy.rs  mysql.rs
src/database/mysql/: user.rs
src/server/: http.rs
