[package]
name = "rust_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.20", features = ["std"] }
backtrace = "0.3.69"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
mysql_async = "0.34.1"
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = "=0.26.0"
rustls-pemfile = "2.1.2"
axum = "0.7.4"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
futures = "0.3.30"